Add Customize, translate, removed CMStats,some menu

--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -1867,37 +1867,23 @@
     <string name="notification_convert_sound_to_vibration_summary">기기가 진동 모드일 때 알림 수신 시 애플리케이션 설정과 관계 진동</string>
 
     <string name="device_hostname">장치 호스트 이름</string>
-    <string name="mod_version">CyanogenMod 버전</string>
+    <string name="mod_version">CLUSTER OS 버전</string>
     <string name="mod_version_default">알 수 없음</string>
-    <string name="build_date">빌드 날짜</string>
-    <string name="anonymous_statistics_title">CyanogenMod 사용 통계</string>
-    <string name="anonymous_statistics_summary">CyanogenMod 개선을 위해 익명으로 사용 통계 보내기</string>
-    <string name="anonymous_statistics_warning_title">정보</string>
-    <string name="anonymous_statistics_warning">CyanogenMod 사용 통계를 보내도록 설정하면 익명의 장치 설치 정보를 CyanogenMod 개발자에게 전송합니다. 전송되는 정보에는 고유 ID가 부여되어 있으며, 이는 귀하의 어떠한 개인 정보도 포함되어 있지 않습니다. 정보는 장치 부팅 시 전송됩니다.\n\n전송되는 정보의 예를 보려면 정보 미리보기를 선택하십시오.</string>
-    <string name="enable_reporting_title">사용 통계 제공</string>
-    <string name="preview_data_title">정보 미리보기</string>
-    <string name="view_stats_title">통계 보기</string>
-    <string name="anonymous_learn_more">자세히 알아보기</string>
-    <string name="anonymous_notification_desc">CyanogenMod 사용 통계 사용 또는 사용 안함</string>
-    <string name="preview_id_title">고유 ID</string>
-    <string name="preview_device_title">장치</string>
-    <string name="preview_version_title">버전</string>
-    <string name="preview_country_title">국가</string>
-    <string name="preview_carrier_title">통신사</string>
+    <string name="build_date">빌드날짜</string>
     <string name="header_category_interface">인터페이스</string>
     <string name="launcher_settings_title">런처</string>
     <string name="themes_settings_title">테마</string>
-    <string name="system_settings_title">시스템</string>
-    <string name="system_interface_title">시스템 인터페이스</string>
-    <string name="notification_drawer_title">알림 서랍</string>
-    <string name="lock_screen_title">잠금 화면</string>
+    <string name="system_settings_title">CLUSTER OS 설정</string>
+    <string name="system_interface_title">사용자 설정</string>
+    <string name="notification_drawer_title">토글</string>
+    <string name="lock_screen_title">잠금화면</string>
     <string name="lockscreen_target_info">바로가기를 할당할 위치로 자물쇠 아이콘을 드래그</string>
-    <string name="lockscreen_target_title">잠금 화면 바로가기</string>
-    <string name="lockscreen_target_summary">잠금 화면 바로가기 확인 또는 변경</string>
-    <string name="lockscreen_target_reset">잠금 화면 바로가기를 기본값으로 초기화</string>
-    <string name="lockscreen_target_save">잠금 화면 바로가기 저장됨</string>
+    <string name="lockscreen_target_title">잠금화면 바로가기</string>
+    <string name="lockscreen_target_summary">잠금화면 바로가기 확인 또는 변경</string>
+    <string name="lockscreen_target_reset">잠금화면 바로가기를 기본값으로 초기화</string>
+    <string name="lockscreen_target_save">잠금화면 바로가기 저장됨</string>
     <string name="lockscreen_target_reset_title">초기화</string>
-    <string name="lockscreen_target_reset_message">모든 잠금 화면 바로가기를 삭제하고 기본값으로 되돌리시겠습니까?</string>
+    <string name="lockscreen_target_reset_message">모든 잠금화면 바로가기를 삭제하고 기본값으로 되돌리시겠습니까?</string>
     <string name="lockscreen_target_empty">비어 있음</string>
     <string name="lockscreen_target_edit_title">바로가기 및 아이콘 편집</string>
     <string name="lockscreen_target_edit_msg">원하는 동작과 아이콘을 선택 또는 변경</string>
@@ -1972,12 +1958,12 @@
     <string name="profile_disable_screen_lock_summary">이 프로필을 사용하고 있는 동안 잠금 화면에 보안 사용 안함</string>
     <string name="vibrator_type_ringer">통화</string>
     <string name="vibrator_type_notification">알림</string>
-    <string name="possibleButtons">가능한 버튼</string>
+    <string name="possibleButtons">가능한 토글</string>
     <string name="toggleWifi">Wi-Fi</string>
     <string name="toggleWifiAp">휴대용 Wi-Fi 핫스팟</string>
     <string name="toggleBluetooth">블루투스</string>
     <string name="toggleGPS">GPS</string>
-    <string name="toggleData">모바일 데이터</string>
+    <string name="toggleData">데이터 네트워크</string>
     <string name="toggleSync">데이터 동기화</string>
     <string name="toggle2g3g">2G/3G</string>
     <string name="toggleSound">벨소리 모드</string>
@@ -1986,7 +1972,7 @@
     <string name="toggleScreenTimeout">절전 모드</string>
     <string name="toggleAirplane">비행기 모드</string>
     <string name="toggleFlashlight">손전등 </string>
-    <string name="toggleLockScreen">잠금 화면</string>
+    <string name="toggleLockScreen">잠금화면</string>
     <string name="screen_security_category">화면 보안</string>
     <string name="screen_security_title">잠금 화면</string>
     <string name="screen_security_summary">잠금 화면 보안, 잠금 보류와 절전 모드 설정 확인 또는 변경</string>
@@ -2114,8 +2100,8 @@
     <string name="ring_mode_normal">보통</string>
     <string name="ring_mode_vibrate">진동</string>
     <string name="ring_mode_mute">음소거</string>
-    <string name="hardware_keys_title">하드웨어 버튼</string>
-    <string name="hardware_keys_bindings_title">버튼 할당</string>
+    <string name="hardware_keys_title">하드웨어 키</string>
+    <string name="hardware_keys_bindings_title">하드웨어 키 할당</string>
     <string name="hardware_keys_enable_custom_title">사용자 지정 작업 사용</string>
     <string name="hardware_keys_home_long_press_title">홈 버튼 (길게 누름)</string>
     <string name="hardware_keys_menu_press_title">메뉴 버튼</string>
@@ -2129,27 +2115,27 @@
     <string name="hardware_keys_action_app_switch">최근에 사용한 앱 보기</string>
     <string name="hardware_keys_action_search">검색 도우미</string>
     <string name="hardware_keys_action_voice_search">음성 검색</string>
-    <string name="hardware_keys_action_in_app_search">앱내부 검색</string>
-    <string name="navigation_bar_title">하단 바</string>
+    <string name="hardware_keys_action_in_app_search">앱 내부 검색</string>
+    <string name="navigation_bar_title">네비게이션 바</string>
     <string name="navigation_bar_help_text">1 - 자물쇠 아이콘을 눌러 편집 시작\n\n2 - 버튼을 눌러 기능 할당 또는 변경\n\n3 - 버튼을 길게 눌러 순서 변경\n\n4 - 자물쇠 버튼을 다시 눌러 설정 저장\n\n5 - 초기화 버튼을 눌러 시스템 기본값으로 초기화\n\n</string>
     <string name="navigation_bar_tips">&#8226; 하나의 기능을 여러 버튼에 동시에 할당할 수 없습니다.\n\n&#8226; 홈 버튼에는 기능을 할당할 수 없습니다.\n\n&#8226; 가장자리에 있는 버튼은 위치를 변경할 수 없습니다.</string>
     <string name="navigation_bar_tips_title">알아두기</string>
     <string name="navigation_bar_reset_message">현재 설정을 삭제하고 기본값으로 되돌리시겠습니까?</string>
-    <string name="navigation_bar_save_message">하단 바 설정 저장됨</string>
-    <string name="navigation_bar_reset_toast">하단 바 설정 초기화됨</string>
+    <string name="navigation_bar_save_message">네비게이션 바 설정 저장됨</string>
+    <string name="navigation_bar_reset_toast">네비게이션 바 설정 초기화됨</string>
     <string name="navigation_bar_menu_editable">편집 가능</string>
     <string name="navigation_bar_menu_locked">잠김</string>
-    <string name="power_widget_title">전원 위젯</string>
-    <string name="title_expanded_widget">전원 위젯</string>
-    <string name="power_widget_behavior">위젯 설정</string>
+    <string name="power_widget_title">토글 설정</string>
+    <string name="title_expanded_widget">토글 활성화</string>
+    <string name="power_widget_behavior">토글 추가 및 제거 </string>
     <string name="title_expanded_hide_onchange">상태 변경 후 서랍 닫기</string>
     <string name="title_expanded_hide_indicator">상태 표시 숨기기</string>
     <string name="title_expanded_hide_scrollbar">스크롤바 숨기기</string>
-    <string name="title_widget_picker">위젯 버튼</string>
-    <string name="summary_widget_picker">사용할 버튼 확인 또는 변경</string>
-    <string name="title_widget_order">위젯 버튼을 순서</string>
-    <string name="summary_widget_order">버튼의 순서 확인 또는 변경</string>
-    <string name="title_buttons">버튼</string>
+    <string name="title_widget_picker">토글</string>
+    <string name="summary_widget_picker">사용할 토글 확인 또는 변경</string>
+    <string name="title_widget_order">토글 순서</string>
+    <string name="summary_widget_order">토글의 순서 확인 또는 변경</string>
+    <string name="title_buttons">토글</string>
     <string name="title_toggle_wifi">Wi-Fi</string>
     <string name="title_toggle_bluetooth">블루투스</string>
     <string name="title_toggle_gps">GPS</string>
@@ -2158,7 +2144,7 @@
     <string name="title_toggle_sync">동기화</string>
     <string name="title_toggle_wifiap">Wi-Fi 핫스팟</string>
     <string name="title_toggle_screentimeout">절전 모드</string>
-    <string name="title_toggle_mobiledata">모바일 데이터</string>
+    <string name="title_toggle_mobiledata">데이터 네트워크</string>
     <string name="title_toggle_lockscreen">잠금 화면</string>
     <string name="title_toggle_networkmode">네트워크 모드</string>
     <string name="title_toggle_autorotate">회전</string>
@@ -2172,7 +2158,7 @@
     <string name="title_toggle_wimax">WiMAX</string>
     <string name="title_button_modes">버튼 설정</string>
     <string name="pref_brightness_mode_title">밝기</string>
-    <string name="pref_brightness_mode_summary">밝기 버튼 설정 확인 또는 변경</string>
+    <string name="pref_brightness_mode_summary">밝기 토글 설정 확인 또는 변경</string>
     <string name="cm_brightness_mode_auto">자동</string>
     <string name="cm_brightness_mode_dim">조명 끄기</string>
     <string name="pref_network_mode_title">네트워크 타일</string>
@@ -2187,12 +2173,7 @@
     <string name="expanded_haptic_feedback_title">터치 시 진동</string>
     <string name="kill_app_longpress_back">뒤로 버튼으로 앱 끄기</string>
     <string name="kill_app_longpress_back_summary">뒤로가기 버튼을 길게 눌러 사용중인 애플리케이션 종료</string>
-    <string name="changelog_title">ChangeLog 보기</string>
-    <string name="changelog_loading">ChangeLog 불러오는 중\u2026</string>
-    <string name="changelog_error">ChangeLog를 불러올 수 없습니다.</string>
-    <string name="changelog_unknown">알 수 없음</string>
-    <string name="changelog_version">버전</string>
-    <string name="power_menu_title">전원 메뉴</string>
+    <string name="power_menu_title">전원메뉴</string>
     <string name="power_menu_reboot_title">다시 시작</string>
     <string name="power_menu_screenshot_title">스크린샷</string>
     <string name="power_menu_expanded_desktop">데스크탑 확장</string>
@@ -2200,12 +2181,10 @@
     <string name="power_menu_airplane_title">비행기 모드</string>
     <string name="power_menu_user_title">사용자 전환</string>
     <string name="power_menu_sound_title">벨소리</string>
-    <string name="cmupdate_settings_title">CyanogenMod 업데이트</string>
-    <string name="cmupdate_settings_summary">사용 가능한 업데이트 조회, 확인 또는 설치</string>
-    <string name="advanced_settings_title">고급</string>
+    <string name="advanced_settings_title">고급설정</string>
     <string name="ime_switcher_notify">선택 알림</string>
     <string name="ime_switcher_notify_summary">입력 방법 선택 알림을 표시</string>
-    <string name="status_bar_title">상단 바</string>
+    <string name="status_bar_title">상단바</string>
     <string name="status_bar_clock_title">시계</string>
     <string name="status_bar_general_title">기본설정</string>
     <string name="status_bar_show_clock_title">시계 표시</string>
@@ -2219,9 +2198,9 @@
     <string name="status_bar_style_icon">아이콘</string>
     <string name="status_bar_style_hidden">표시 안함</string>
     <string name="status_bar_signal_text_show_text">글자</string>
-    <string name="status_bar_battery_status_percentage">백분율</string>
+    <string name="status_bar_battery_status_percentage">퍼센트</string>
     <string name="status_bar_battery_status_circle">원</string>
-    <string name="status_bar_battery_status_circle_percentage">원과 백분율</string>
+    <string name="status_bar_battery_status_circle_percentage">원과 퍼센트</string>
     <string name="status_bar_notif_count_title">알림 개수 표시</string>
     <string name="status_bar_notif_count_summary">대기중인 알림의 개수를 표시</string>
     <string name="display_category_wakeup_options_title">화면 켜기</string>
@@ -2244,7 +2223,8 @@
     <string name="lockscreen_buttons_previous">이전 곡</string>
     <string name="lockscreen_buttons_playpause">음악 재생/일시 정지</string>
     <string name="lockscreen_buttons_toggle_sound">벨소리 모드 전환</string>
-    <string name="quick_settings_panel_title">빠른 설정 패널</string>
+    <string name="quick_settings_panel_title">타일</string>
+    <string name="quick_settings_panel_summary">퀵패널 타일을 설정할 수 있습니다</string>
     <string name="quick_settings_title">빠른 설정</string>
     <string name="title_static_tiles">고정 타일</string>
     <string name="tile_picker_title">타일 및 레이아웃</string>
@@ -2259,7 +2239,7 @@
     <string name="title_tile_torch">손전등</string>
     <string name="title_tile_lockscreen">잠금 화면 사용</string>
     <string name="title_tile_lte">LTE</string>
-    <string name="title_tile_mobiledata">모바일 데이터</string>
+    <string name="title_tile_mobiledata">데이터 네트워크</string>
     <string name="title_tile_profile">프로필</string>
     <string name="title_tile_autorotate">회전</string>
     <string name="title_tile_settings">설정</string>
@@ -2370,6 +2350,20 @@
     <string name="root_access_apps">애플리케이션만</string>
     <string name="root_access_adb">ADB만</string>
     <string name="root_access_all">애플리케이션 및 ADB</string>
+
+   <!-- Summary -->
+    <string name="navigation_bar_summary">소프트 키 추가,제거 를 하실 수 있습니다</string>
+    <string name="hardware_keys_summary">하드웨어 키 기능을 변경할 수 있습니다</string>
+    <string name="toggles_summary">토글 버튼을 선택,추가,제거 할 수 있습니다</string>
+    <string name="power_menu_summary">디바이스 옵션 매뉴를 설정할 수 있습니다</string>
+    <string name="status_bar_summary">배터리 아이콘, 시그널 아이콘 등을 할 수 있습니다</string>
+    <string name="themes_summary">다양한 테마를 선택할 수 있습니다</string>
+    <string name="lockscreen_summary">잠금화면에 날씨 추가 등을 할 수 있습니다</string>
+    <string name="performance_summary">하드웨어 성능을 설정할 수 있습니다</string>
+
+    <string name="cluster_about">CLUSTER Dev 에 대하여</string>
+    <string name="cluster_website_title">CLUSTER Dev 웹사이트</string>
+    <string name="devs">개발자</string>
 
     <!-- **** CYANOGENMOD ADDITIONS END **** -->
 </resources>
